19Jan03=======================================================================
1. I have made a fundemental change to the way PC19s are dealt with as a 
result of the discussions on the mailing list. From now on, only nodes that
issue PC16s will have PC19s propagated. If they *ever* issue a PC16 then from
then on they are considered as being 'connected' and thus routable. No PC16
and you have no route. This should stop all passive links being routed. For
the few cases where you know that that is a very small node and it rarely has
users, then you can do a set/routepc19 <node> to enable PC19 propagation. In
the even more rare case of you wanting to prevent PC19s being routed thru 
your node, you can use unset/routepc19. THIS IS NOT A SUBSTITUTE FOR ROUTE
FILTERING!!!!! [translators: I have added wpc16s, wpc16u, wpc19s, wpc19u]

BTW the first time you connect again you will notice a separate PC19 go out
for each 'new' PC16 that the node sees. This is normal and will go away the
second time the system needs to issue a PC19.
2. Alter the export_user command to remove users that have no useful info
and have not been seen for more than (default) 1 year.
3. fix the problem of users on more than one node not being propagated
4. remove spaces and all non-US ascii characters from PC41 for the dup check.
5. put in check to see if the parent of a newly allowed PC19 is still there
(this needs further investigation).
17Jan03=======================================================================
1. Fix problem with lines being left in the main input queue for a 
disconnected/ing node.
14Jan03=======================================================================
1. Tidy up AUTOLOAD functions
2. Make sure that empty PC16s are not sent on startup to a node.
12Jan03=======================================================================
1. add Czech language courtesy of Milan OK1XH
06Jan03=======================================================================